[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0"]

[project]
authors = [{name = "Ben Vining"}]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Reference",
	"License :: GPL",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3 :: Only"
]
description = "Command line help interface for the Oranges CMake library"
keywords = ["CMake", "Oranges", "reference", "docs"]
license = {text = "GPL3"}
name = "oranges_help"
requires-python = ">=3.9"
urls = {repository = "https://github.com/benthevining/Oranges"}
version = "2.23.0"

[project.scripts]
oranges = "oranges_help.main:main"

[tool.setuptools]
include-package-data = false
package-data = {oranges_help = ["data/modules_root.txt", "data/properties.json"]}
package-dir = {oranges_help = "."}
packages = ["oranges_help"]
