# ======================================================================================
#    ____  _____            _   _  _____ ______  _____
#   / __ \|  __ \     /\   | \ | |/ ____|  ____|/ ____|
#  | |  | | |__) |   /  \  |  \| | |  __| |__  | (___
#  | |  | |  _  /   / /\ \ | . ` | | |_ |  __|  \___ \
#  | |__| | | \ \  / ____ \| |\  | |__| | |____ ____) |
#   \____/|_|  \_\/_/    \_\_| \_|\_____|______|_____/
#
#  This file is part of the Oranges open source CMake library and is licensed under the terms of the GNU Public License.
#
# ======================================================================================

add_subdirectory (code_generation)
add_subdirectory (dependencies)
add_subdirectory (documentation)
add_subdirectory (general)
add_subdirectory (installing)
add_subdirectory (juce)

if (NOT ORANGES_NO_TARGETS)
    add_subdirectory (helper_targets)
endif ()
